Betrieb im Docker-Stack: Reporting neben dem Hilfecenter
Der Server betreibt bereits PostgreSQL 17 als Container. Der Reporting-Teil
kommt deshalb als eigener Compose-Stack daneben und nutzt diesen PostgreSQL
mit, statt einen zweiten Datenbankserver aufzusetzen.

- compose.yml: postgrest (nur im Docker-Netz), metabase (nur 127.0.0.1),
  import und sicherung als Einmal-Läufe für die systemd-Timer
- import/Dockerfile: Werkzeug-Abbild auf Basis postgres:17-alpine
- Import legt fehlende Eigentümer-Rollen aus den Dumps ohne Anmelderecht an
  (der Cluster-Superuser heißt luemobil, die Dumps erwarten postgres)
- Caddy statt nginx: nur Einbettungspfade, CSP auf das Hilfecenter begrenzt,
  Token im Zugriffslog gekürzt
- Ticket-API ohne öffentlichen Endpunkt: die App ruft http://postgrest:3000
- Betriebshandbuch auf Docker umgestellt, bisherige Variante als Anhang A

End-to-End in Docker geprüft: Import, Sichten über postgres_fdw, Ticketauskunft
aus dem Netz heraus, Austausch bei laufenden Diensten, Sicherung beider
Datenbanken. Caddy-Konfiguration mit echten Aufrufen getestet.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>