@@ -16,30 +16,29 @@ stellt die Daten über zwei Wege bereit: die Reporting-Sichten (`rpt`, z. B. fü
 und die Ticket-API für das Hilfecenter.
 
 ```
- Lieferant (Produktion)                          Virtueller Server
- ─────────────────────                           ───────────────────────────────────────────────────────
-                         SFTP, nur Schlüssel     /srv/luemobil/dumps/eingang
- kk_mpswl-PROD-….sql  ─────────────────────────▶      │
- kk_swl-PROD-….sql                                    │  luemobil-import.timer (alle 30 min)
-                                                      ▼
-                                                 import.sh ── prüfen ── einspielen ── austauschen
-                                                      │
-                                    ┌─────────────────┼──────────────────┐
-                                    ▼                 ▼                  ▼
-                                kk_mpswl           kk_swl          lue_reporting
-                                (Plattform)        (Shop)          ├─ rpt.*        Sichten über postgres_fdw
-                                    ▲                 ▲            ├─ api.*        Ticket-API-Funktion
-                                    └──── postgres_fdw┘            └─ protokoll.*  Tokens, Abfrageprotokoll
-                                                                          │
-                                            ┌─────────────────────────────┴───────────┐
-                                            ▼                                         ▼
- Hilfecenter ──Bearer-Token──▶ nginx :443 ──▶ PostgREST 127.0.0.1:3100   Metabase 127.0.0.1:3000
-   (Ticketauskunft)            tickets-api                                 metabase_app (eigene DB)
-                                                                                      ▲
- Hilfecenter ──signiertes Token im iframe──▶ nginx :443 ─────────────────────────────┘
-   (Dashboards)                              reporting: nur /embed, /api/embed, /app
+ Lieferant (Produktion)                Server (ein VPS, alles in Docker)
+ ─────────────────────                 ────────────────────────────────────────────────────
+                    SFTP, nur Schlüssel
+ kk_mpswl-PROD-….sql ─────────────────▶ /srv/luemobil/dumps/eingang
+ kk_swl-PROD-….sql                            │  luemobil-import.timer (alle 30 min)
+                                              ▼
+                                       import (Container) ── prüfen ── einspielen ── austauschen
+                                              │
+                                              ▼
+                              ┌──────── postgres (Container des Hilfecenters) ────────┐
+                              │  luemobil │ kk_mpswl │ kk_swl │ lue_reporting │       │
+                              │                                 └─ rpt / api / protokoll
+                              │                                 metabase_app          │
+                              └───────▲──────────────────▲───────────────▲────────────┘
+                                      │                  │               │
+                                 app (Next.js)      postgrest        metabase
+                                      │            127.0.0.1 nur      127.0.0.1:3001
+                                      │            im Docker-Netz         │
+                                      ▼                                   ▼
+                                    caddy ── luemobil.…  (Hilfecenter)   reporting.…
+                                                                        nur /embed, /api/embed, /app
 
- Admins ──SSH-Tunnel──▶ 127.0.0.1:3000 (Metabase-Oberfläche, nicht öffentlich)
+ Admins ──SSH-Tunnel──▶ 127.0.0.1:3001 (Metabase-Oberfläche, nicht öffentlich)
 ```
 
 **Wichtig zum Verständnis:**
@@ -52,6 +51,10 @@ und die Ticket-API für das Hilfecenter.
 - **Metabase ist nicht öffentlich.** Nach außen geht nur die Einbettung einzelner Dashboards
   ins Hilfecenter. Anmeldeseite, Admin-Oberfläche und die übrige Metabase-API sind gesperrt;
   Administratoren arbeiten über einen SSH-Tunnel.
+- **Die Ticket-API ist gar nicht öffentlich.** Die Hilfecenter-App ruft sie im Docker-Netz
+  unter `http://postgrest:3000` auf.
+- **Der PostgreSQL-Container gehört dem Hilfecenter-Stack.** Wird dieser gestoppt oder mit
+  `docker compose down -v` entfernt, trifft das auch die Reporting-Daten.
 - Auf diesem Server liegen **echte, nicht anonymisierte Personendaten**. Die Skripte
   `metabase-setup/01_anonymisieren.sql`, `02_anonymisieren_mpswl.sql` und
   `ticket-api/02_nur_demo.sql` sind nur für die Demo und werden hier **nie** ausgeführt.
@@ -62,12 +65,13 @@ und die Ticket-API für das Hilfecenter.
 
 | | Empfehlung | Begründung |
 |---|---|---|
-| Betriebssystem | Debian 12 oder Ubuntu 24.04 LTS | systemd, aktuelle OpenSSL |
-| PostgreSQL | **Version 17** (aus apt.postgresql.org) | Die Dumps stammen aus PG 17.11 und enthalten PG17-Objekte. Mit PG16 schlägt der Import fehl (getestet). |
-| CPU / RAM | 2 vCPU / 8 GB | Import dauert ca. 6 Sekunden; Metabase belegt 2 GB Heap |
-| Java | **Temurin 25 (JRE)** | Von Metabase 0.63 verlangt |
-| Festplatte | 40 GB | Während des Imports liegen die Daten 3-fach vor (aktuell, `_neu`, `_alt`), dazu 7 Tage Dump-Archiv. Heute ca. 15 MB je Nacht |
-| Eingehend | 22 (nur SFTP-Lieferant + Administration), 443 (nur Hilfecenter), 80 (nur Zertifikatserneuerung) | Firewall auf Absender beschränken |
+| Betriebssystem | Debian 12 oder Ubuntu 24.04 LTS | systemd für die Timer, Docker aus den Paketquellen |
+| Docker | Engine + Compose v2 | Der Hilfecenter-Stack läuft bereits so |
+| PostgreSQL | **Version 17** — vorhandener Container `postgres:17-alpine` | Die Dumps stammen aus PG 17.11 und enthalten PG17-Objekte. Mit PG16 schlägt der Import fehl (getestet). |
+| CPU / RAM | 2 vCPU / 8 GB | Import dauert ca. 6 Sekunden; Metabase belegt rund 2 GB |
+| Java | nicht nötig | steckt im Metabase-Abbild |
+| Festplatte | 40 GB | Während des Imports liegen die Daten 3-fach vor (aktuell, `_neu`, `_alt`), dazu 7 Tage Dump-Archiv und die Docker-Abbilder (rund 1,4 GB). Heute ca. 15 MB je Nacht |
+| Eingehend | 22 (SFTP-Lieferant + Administration), 443 und 80 (Caddy) | Die Ticket-API braucht keinen offenen Port |
 | Ausgehend | 25/587 (Mail für Fehlermeldungen), 443 (Updates, Let's Encrypt) | |
 | Zeitzone | Europe/Berlin | Zeitpläne und Protokolle in Ortszeit |
 
@@ -77,14 +81,9 @@ und die Ticket-API für das Hilfecenter.
 
 | Pfad | Eigentümer | Rechte | Inhalt |
 |---|---|---|---|
-| `/opt/luemobil/` | root:root | 755 | Kopie dieses Repositorys (Skripte) |
-| `/etc/luemobil/import.conf` | root:postgres | 640 | Import-Konfiguration |
-| `/etc/luemobil/postgrest.conf` | root:postgrest | 640 | PostgREST-Konfiguration **mit DB-Passwort und JWT-Schlüssel** |
-| `/etc/luemobil/jwt_secret` | root:postgres | 640 | JWT-Schlüssel, zum Ausstellen von Tokens |
-| `/etc/luemobil/erlaubte_ips.conf` | root:root | 644 | IP-Freigaben für die API |
-| `/etc/luemobil/metabase.env` | root:metabase | 640 | Metabase-Konfiguration **mit DB-Passwort, Verschlüsselungs- und Einbettungsschlüssel** |
-| `/opt/metabase/metabase.jar` | root:root | 644 | Metabase-Programm |
-| `/var/lib/metabase/` | metabase:metabase | 750 | Arbeitsverzeichnis, Plugins |
+| `/opt/luemobil/` | root:root | 755 | Dieses Repository (Skripte, `compose.yml`) |
+| `/opt/luemobil/.env` | root:root | 600 | **Alle Passwörter und Schlüssel** des Reporting-Stacks |
+| `/etc/luemobil/import.conf` | root:root | 644 | Import-Konfiguration (in den Container gemountet) |
 | `/srv/luemobil/dumps/` | root:root | 755 | SFTP-Chroot des Lieferanten (muss root gehören) |
 | `/srv/luemobil/dumps/eingang/` | dumpupload:luemobil-dumps | 2770 | Hier kommen die Dumps an |
 | `/srv/luemobil/archiv/` | postgres:postgres | 700 | Importierte Dumps, 7 Tage |
@@ -95,14 +94,13 @@ und die Ticket-API für das Hilfecenter.
 | Systembenutzer | Zweck |
 |---|---|
 | `dumpupload` | Nur SFTP, nur Schlüssel, eingesperrt in `/srv/luemobil/dumps`. Keine Shell. |
-| `postgres` | Führt Import und Sicherung aus (Datenbank-Superuser über Unix-Socket) |
-| `postgrest` | Führt PostgREST aus, kein Login |
-| `metabase` | Führt Metabase aus, kein Login |
+| uid 70 (in den Containern `postgres`) | Import und Sicherung schreiben als diese Kennung — daher gehören ihr `archiv`, `fehler`, Status- und Sicherungsverzeichnis |
 
 | Datenbankrolle | Zweck |
 |---|---|
-| `postgres` | Eigentümer aller Datenbanken und Sichten, Import |
-| `api_zugang` | Anmeldung von PostgREST (Passwort), darf selbst nichts |
+| `luemobil` | Superuser des vorhandenen Clusters: Eigentümer der Sichten, führt den Import aus |
+| `postgres` | **Nur Eigentümername aus den Dumps**, ohne Anmelderecht (siehe 4.4) |
+| `api_zugang` | Anmeldung des postgrest-Containers (Passwort), darf selbst nichts |
 | `hilfecenter` | Rolle aus dem API-Token: darf nur `api.tickets_fuer_email` ausführen |
 | `api_eigentuemer` | Besitzt die API-Funktion: liest 2 Sichten, schreibt nur ins Abfrageprotokoll |
 | `metabase_app` | Besitzt die Metabase-Anwendungsdatenbank `metabase_app`, sonst nichts |
@@ -110,11 +108,515 @@ und die Ticket-API für das Hilfecenter.
 
 ---
 
-## 4. Installation
+## 4. Installation im Docker-Stack
+
+Auf dem Server läuft bereits der Hilfecenter-Stack: Caddy davor, die Next.js-App und
+**PostgreSQL 17 als Container** (`postgres:17-alpine`, Datenbank und Benutzer `luemobil`,
+Volume `pgdata`). Der Reporting-Teil kommt als **eigener Compose-Stack** daneben und nutzt
+diesen PostgreSQL mit. Kein zweiter Datenbankserver, keine doppelte Sicherung.
+
+```
+Hilfecenter-Stack (vorhanden)              Reporting-Stack (dieses Repository)
+├─ caddy (Host)                            ├─ postgrest   Ticket-API, nur im Docker-Netz
+├─ app (Next.js, 127.0.0.1:3000)           ├─ metabase    Dashboards, 127.0.0.1:3001
+└─ postgres  ◀────── gemeinsames Netz ────▶├─ import      Einmal-Lauf, per systemd-Timer
+   luemobil, kk_mpswl, kk_swl,             └─ sicherung   Einmal-Lauf, per systemd-Timer
+   lue_reporting, metabase_app
+```
+
+Die App ruft die Ticketauskunft intern unter `http://postgrest:3000` auf — kein öffentlicher
+Endpunkt, kein Zertifikat, keine IP-Freigabe. Öffentlich ist nur die Einbettung der
+Dashboards über Caddy.
+
+> Wer das ohne Docker betreiben will (eigener Server, PostgreSQL und Dienste direkt auf dem
+> Host), findet die Schritte in **Anhang A**. Alles Übrige in diesem Handbuch gilt für beide.
+
+### 4.1 Voraussetzungen prüfen
+
+```bash
+docker compose version
+docker network ls | grep -i hilfecenter      # Name des gemeinsamen Netzes merken
+docker compose -f /pfad/zum/hilfecenter/docker-compose.yml exec postgres \
+  psql -U luemobil -Atc "select version()"   # muss PostgreSQL 17 sein
+df -h /var/lib/docker                        # 10 GB frei reichen
+```
+
+### 4.2 Verzeichnisse, Lieferantenzugang, Repository
+
+```bash
+groupadd --system luemobil-dumps
+useradd --create-home --shell /usr/sbin/nologin -G luemobil-dumps dumpupload
+
+install -d -o root       -g root           -m 755  /srv/luemobil /srv/luemobil/dumps /etc/luemobil
+install -d -o dumpupload -g luemobil-dumps -m 2770 /srv/luemobil/dumps/eingang
+# Die Container laufen als uid 70 (postgres im Alpine-Abbild):
+install -d -o 70 -g 70 -m 750 /srv/luemobil/archiv /srv/luemobil/fehler \
+                              /var/lib/luemobil-import /var/backups/luemobil
+setfacl -m u:70:rwx /srv/luemobil/dumps/eingang     # Import darf Dumps wegräumen
+
+git clone <repository> /opt/luemobil
+install -o root -g root -m 644 /opt/luemobil/server/import.conf.beispiel /etc/luemobil/import.conf
+nano /etc/luemobil/import.conf                      # MELDUNG_AN und Mindestmengen prüfen
+```
+
+SFTP-Zugang für den Lieferanten einrichten wie in **Anhang A.4** beschrieben
+(`server/sshd-dumps.conf`), einschließlich der Vereinbarung über Dateinamen und Format.
+
+### 4.3 Konfiguration des Stacks
+
+```bash
+cd /opt/luemobil
+cp server/reporting.env.beispiel .env && chmod 600 .env
+
+openssl rand -hex 24     # -> API_DB_PASSWORT   (Rolle api_zugang)
+openssl rand -hex 24     # -> MB_DB_PASSWORT    (Rolle metabase_app)
+openssl rand -base64 48  # -> JWT_SECRET        (Tokens der Ticket-API)
+openssl rand -base64 32  # -> MB_ENCRYPTION_SECRET_KEY
+openssl rand -hex 32     # -> MB_EMBEDDING_SECRET_KEY (geht ans Hilfecenter)
+nano .env                # Werte eintragen, dazu POSTGRES_PASSWORD und HILFECENTER_NETZ
+```
+
+`POSTGRES_PASSWORD` ist dasselbe wie in der `.env` des Hilfecenters — der Import und Metabase
+melden sich damit am vorhandenen PostgreSQL an.
+
+### 4.4 Erstimport
+
+```bash
+# Dumps einmalig ablegen (oder den Lieferanten hochladen lassen)
+cp kk_mpswl-PROD-*.sql kk_swl-PROD-*.sql /srv/luemobil/dumps/eingang/
+
+cd /opt/luemobil && docker compose run --rm import
+```
+
+Erwartet: `Rolle postgres angelegt`, beide Datenbanken eingespielt, dann
+`Rauchtest übersprungen: lue_reporting existiert noch nicht (Ersteinrichtung)`.
+
+> **Warum die Rolle `postgres` angelegt wird:** Die Dumps enthalten rund 240-mal
+> `ALTER ... OWNER TO postgres`. In eurem Cluster heißt der Superuser `luemobil`, eine Rolle
+> `postgres` gibt es nicht. Der Import legt sie deshalb **ohne Anmelderecht** an (`NOLOGIN`)
+> — ein reiner Eigentümername, kein zusätzlicher Zugang. Steuerbar über `DUMP_ROLLEN`
+> in der `import.conf`.
+
+### 4.5 Reporting-Sichten
+
+```bash
+cd /opt/luemobil
+PG="docker compose -f /pfad/zum/hilfecenter/docker-compose.yml exec -T postgres psql -U luemobil -v ON_ERROR_STOP=1"
+
+$PG -d postgres -c "CREATE DATABASE lue_reporting"
+sed "s/PGUSER_PLACEHOLDER/luemobil/" metabase-setup/03_reporting_views.sql | $PG -q -d lue_reporting
+for f in 04_kennzahlen 06_payone_und_kennzahlen 08_korrekturen; do
+  $PG -q -d lue_reporting < metabase-setup/$f.sql
+done
+$PG -At -d lue_reporting -c "SELECT count(*) FROM rpt.bestellposition"      # > 0
+```
+
+`postgres_fdw` verbindet sich innerhalb desselben Containers auf `localhost` — deshalb bleibt
+in `03_reporting_views.sql` nur der Platzhalter für den Benutzer zu ersetzen.
+
+> **Nicht ausführen:** `01_anonymisieren.sql`, `02_anonymisieren_mpswl.sql` (nur Demo).
+> **Achtung:** Die Skripte 03–08 legen Sichten mit `DROP … CASCADE` neu an. Danach fehlen die
+> Rechte der Ticket-API: 4.6 erneut ausführen. Für Metabase ist das nicht nötig,
+> `metabase_leser` bekommt neue Sichten über Standardrechte automatisch.
+
+### 4.6 Ticket-API und Metabase-Rollen in der Datenbank
+
+```bash
+cd /opt/luemobil
+source .env
+$PG -q -d lue_reporting -v db_passwort="$API_DB_PASSWORT" < ticket-api/01_datenbank.sql
+$PG -q -d lue_reporting -v pw_app="$MB_DB_PASSWORT" -v pw_leser="<neu: openssl rand -hex 24>" \
+        -v eigentuemer=luemobil < server/metabase_datenbank.sql
+```
+
+**Nicht** `ticket-api/02_nur_demo.sql` ausführen — das gilt nur für die anonymisierte Demo.
+Das Passwort von `metabase_leser` wird in 4.8 gebraucht, also notieren.
+
+### 4.7 Stack starten
+
+```bash
+cd /opt/luemobil && docker compose up -d
+docker compose ps
+docker compose logs -f metabase       # 1–2 Minuten bis "Metabase Initialization COMPLETE"
+```
+
+Die Ticket-API ist damit im Docker-Netz unter `http://postgrest:3000` erreichbar, Metabase
+auf `127.0.0.1:3001`. Nach außen ist noch nichts offen.
+
+### 4.8 Dashboards übernehmen
+
+Die Dashboards liegen in der lokalen Metabase (H2-Datei). Metabase bringt dafür `load-from-h2`
+mit. **Lokal geprobt:** 5 Dashboards und 80 Fragen übertragen, IDs 6–9 erhalten.
+
+```bash
+# 1. Auf dem Mac: Metabase stoppen, Datei kopieren, wieder starten
+cd ~/Documents/luemobil_reporting/metabase-setup && ./stop.sh
+scp metabase-app-db.mv.db admin@server:/tmp/ && ./start.sh
+
+# 2. Auf dem Server: Metabase anhalten und die Datei in die leere metabase_app laden
+cd /opt/luemobil && docker compose stop metabase
+docker run --rm --network "$HILFECENTER_NETZ" -v /tmp:/h metabase/metabase:v0.63.18 \
+  sh -c 'java --add-opens java.base/java.nio=ALL-UNNAMED -jar /app/metabase.jar load-from-h2 /h/metabase-app-db'
+  # MB_DB_*-Variablen dabei aus der .env übergeben (-e MB_DB_TYPE=postgres -e MB_DB_HOST=… )
+shred -u /tmp/metabase-app-db.mv.db
+docker compose up -d metabase
+```
+
+Danach die Nacharbeiten über den SSH-Tunnel:
+
+```bash
+ssh -L 3001:127.0.0.1:3001 admin@server          # auf dem Arbeitsplatz, offen lassen
+
+MB_URL=http://localhost:3001 LESER_PASSWORT=<pw_leser aus 4.6> \
+ADMIN_EMAIL=vorname.nachname@luemobil.de ADMIN_VORNAME=Vorname ADMIN_NACHNAME=Nachname \
+ADMIN_PASSWORT='<mind. 12 Zeichen>' DB_HOST=postgres \
+  /opt/luemobil/server/metabase_nach_umzug.py
+```
+
+Das Skript stellt die Verbindung auf `metabase_leser` um, entfernt die Beispieldatenbank,
+schaltet den Zwischenspeicher ab (sonst könnten nach dem Import alte Zahlen erscheinen),
+legt das persönliche Admin-Konto an, deaktiviert das Demo-Konto und prüft die
+Einbettungsfreigabe der Dashboards 6–9. Danach im Tunnel von Hand: die vier alten Dashboards
+aus der Bauphase (IDs 2–5) archivieren und weitere Konten anlegen.
+
+### 4.9 Caddy: Dashboards nach außen
+
+```bash
+cat /opt/luemobil/server/Caddyfile-reporting.example >> /etc/caddy/Caddyfile
+nano /etc/caddy/Caddyfile        # Hostnamen und erlaubte einbettende Adressen eintragen
+caddy validate --config /etc/caddy/Caddyfile && systemctl reload caddy
+```
+
+Durchgelassen werden nur `/embed/`, `/api/embed/` und `/app/`, alles andere gibt `404`.
+Eine zusätzliche `Content-Security-Policy` lässt nur das Hilfecenter als einbettende Seite zu.
+Im Zugriffslog wird das Token im Pfad durch `…` ersetzt. **Lokal geprüft**, einschließlich
+Log-Kürzung und Sperre für Anmeldeseite, Admin-Oberfläche und übrige API.
+
+### 4.10 Hilfecenter anschließen
+
+In der `.env` des Hilfecenters:
+
+```bash
+LUEMOBIL_API_URL=http://postgrest:3000
+METABASE_URL=https://reporting.swl-innovation.de
+METABASE_DASHBOARDS=ueberblick:6,abo:7,payone:8,betrieb:9
+```
+
+Dazu die beiden Geheimnisse als Dateien in dessen `secrets/`:
+
+```bash
+cd /pfad/zum/hilfecenter
+/opt/luemobil/ticket-api/token.sh neu hilfecenter-prod 365   # siehe 5.3 (Variante Docker)
+printf '%s' '<token>'          > secrets/luemobil_api_token
+printf '%s' '<MB_EMBEDDING_SECRET_KEY aus /opt/luemobil/.env>' > secrets/metabase_embed_secret
+chmod 400 secrets/luemobil_api_token secrets/metabase_embed_secret
+docker compose up -d app
+```
+
+Damit die App den Container `postgrest` erreicht, müssen beide Stacks dasselbe Netz nutzen —
+das stellt `HILFECENTER_NETZ` in der `.env` des Reporting-Stacks sicher.
+
+### 4.11 Zeitpläne aktivieren
+
+```bash
+cp /opt/luemobil/server/luemobil-*.service /opt/luemobil/server/luemobil-*.timer /etc/systemd/system/
+systemctl daemon-reload
+systemctl enable --now luemobil-import.timer luemobil-import-waechter.timer luemobil-sicherung.timer
+systemctl list-timers 'luemobil-*'
+```
+
+| Timer | Wann | Was |
+|---|---|---|
+| `luemobil-import.timer` | alle 30 Minuten | `docker compose run --rm import` — ist nichts da, endet der Lauf sofort |
+| `luemobil-import-waechter.timer` | täglich 09:00 | meldet, wenn der letzte erfolgreiche Import älter als 30 Stunden ist |
+| `luemobil-sicherung.timer` | täglich 04:15 | sichert `lue_reporting` und `metabase_app`, behält 30 Tage |
+
+### 4.12 Abnahme
+
+```bash
+cd /opt/luemobil
+
+# Import: 32 Prüfungen mit eigenen Testdatenbanken, fasst die echten nicht an
+docker compose run --rm --entrypoint /opt/luemobil/test_import.sh import \
+  /srv/luemobil/archiv/<mpswl-dump>.sql /srv/luemobil/archiv/<swl-dump>.sql
+
+# Ticket-API aus dem Docker-Netz, wie die App sie ruft
+docker run --rm --network "$HILFECENTER_NETZ" curlimages/curl -s -X POST \
+  http://postgrest:3000/rpc/tickets_fuer_email \
+  -H "Authorization: Bearer <token>" -H "Content-Type: application/json" \
+  -d '{"p_email":"<bekannte adresse>"}'
+
+# Dashboards über den Tunnel
+METABASE_URL=http://localhost:3001 METABASE_EMBED_SECRET=<schlüssel> \
+  metabase-setup/einbettung_pruefen.py
+
+# Von außen muss die Metabase-Oberfläche 404 liefern
+curl -s -o /dev/null -w '%{http_code}\n' https://reporting.swl-innovation.de/
+```
+
+## 5. Täglicher Betrieb
+
+### 5.1 So läuft ein Import
+
+1. **Suchen:** neuestes `kk_mpswl-PROD-*` und `kk_swl-PROD-*` im Eingang. Ältere, liegen gebliebene Dumps werden übersprungen und archiviert.
+2. **Warten, falls nötig:** Fehlt der Partner-Dump, wartet der Import bis zu 6 Stunden. Wird eine Datei noch geschrieben, wartet er auf den nächsten Lauf.
+3. **Vollständigkeit:** Endzeile von `pg_dump` vorhanden, beide Dumps vom selben Tag, Paar noch nicht importiert (SHA-256-Register).
+4. **Einspielen** in `kk_mpswl_neu` und `kk_swl_neu`, jeweils in einer einzigen Transaktion. Die laufenden Datenbanken bleiben dabei unberührt.
+5. **Plausibilität:** Mindestmengen, und keine Tabelle ist um mehr als 5 % geschrumpft (Konten, Bestellungen, Abo-Berechtigungen, Positionen, Produkte).
+6. **Austausch** per Umbenennen: aktuell → `_alt`, `_neu` → aktuell. Dauert unter einer Sekunde. Offene Verbindungen zu den Quelldatenbanken werden getrennt, `lue_reporting` verbindet sich beim nächsten Zugriff automatisch neu (getestet).
+7. **Rauchtest:** `SELECT count(*) FROM rpt.bestellposition` muss > 0 liefern. Wenn nicht, wird sofort zurückgetauscht.
+8. **Abschluss:** Dumps ins Archiv, Status nach `/var/lib/luemobil-import/letzter_import.json`, Dumps älter als 7 Tage löschen.
+
+**Grundsatz:** Scheitert irgendein Schritt, bleiben die Daten von gestern aktiv. Die Dumps
+wandern nach `fehler/`, und es kommt eine Mail.
+
+**Während des Austauschs** kann eine einzelne API- oder Metabase-Anfrage, die genau in dieser
+Sekunde läuft, mit Fehler enden. Die nächste Anfrage funktioniert wieder.
+
+**Metabase braucht beim Import nichts zu tun.** Es liest `lue_reporting`, und die wird nicht
+angefasst. Die Verbindungen in die ausgetauschten Quelldatenbanken baut PostgreSQL selbst neu
+auf. Lokal geprüft: Nach dem Abbruch aller Verbindungen liefert dieselbe Frage sofort wieder
+Zahlen. Ein Neustart von Metabase nach dem Import ist **nicht** nötig. Weil der Zwischenspeicher
+abgeschaltet ist (4.8.4), zeigen die Dashboards sofort den neuen Stand.
+
+### 5.2 Nachsehen
+
+```bash
+cd /opt/luemobil
+docker compose run --rm import --status      # letzter erfolgreicher Import (JSON)
+journalctl -u luemobil-import --since today  # Protokoll der Importläufe
+systemctl list-timers 'luemobil-*'           # nächste Läufe
+docker compose ps                            # laufen postgrest und metabase?
+ls -l /srv/luemobil/dumps/eingang /srv/luemobil/fehler
+```
+
+Beispiel eines erfolgreichen Laufs:
+
+```
+Importiere Paar vom 20260912: kk_mpswl-PROD-20260912020000.sql, kk_swl-PROD-20260912020000.sql
+  kk_mpswl_neu eingespielt (2 s)
+  kk_swl_neu eingespielt (2 s)
+  kk_mpswl.customers: 2132 -> 2132
+  kk_mpswl.orders: 1551 -> 1551
+  kk_mpswl.abo_berechtigungen_luebeck: 8267 -> 8267
+  kk_swl.orders: 1551 -> 1551
+  kk_swl.orders_products: 1551 -> 1551
+  kk_swl.products: 34 -> 34
+  Datenbanken ausgetauscht
+  Rauchtest ok: 1551 Zeilen über lue_reporting
+Import erfolgreich. Vorheriger Stand liegt als kk_mpswl_alt / kk_swl_alt bereit.
+```
+
+### 5.3 Ticket-API
+
+Tokens werden mit `token.sh` verwaltet. Im Docker-Betrieb zeigt es über `DB`-Variablen auf
+den Container, der JWT-Schlüssel kommt aus der `.env`:
+
+```bash
+cd /opt/luemobil && source .env
+export PGHOST=127.0.0.1 PGPORT=5433 PGUSER=luemobil PGPASSWORD="$POSTGRES_PASSWORD"
+# Zugang zum Container-PostgreSQL, solange kein Port veröffentlicht ist:
+docker compose -f /pfad/zum/hilfecenter/docker-compose.yml port postgres 5432 2>/dev/null \
+  || ssh -L 5433:127.0.0.1:5432 …   # oder: docker compose exec postgres psql …
+
+printf '%s' "$JWT_SECRET" > /tmp/jwt && JWT_SECRET_DATEI=/tmp/jwt DB=lue_reporting \
+  ticket-api/token.sh liste                     # Tokens, Zustand, Anzahl Abfragen
+JWT_SECRET_DATEI=/tmp/jwt DB=lue_reporting ticket-api/token.sh sperren <jti>
+shred -u /tmp/jwt
+
+# Abfrageprotokoll ansehen
+docker compose -f /pfad/zum/hilfecenter/docker-compose.yml exec -T postgres \
+  psql -U luemobil -d lue_reporting -c \
+  "SELECT zeitpunkt, anwendung, bearbeiter, ip, treffer FROM protokoll.abfrage ORDER BY id DESC LIMIT 20"
+
+docker compose logs -f postgrest                # Fehler der API (ohne Daten)
+```
+
+### 5.4 Metabase
+
+```bash
+ssh -L 3001:127.0.0.1:3001 admin@server      # Oberfläche: http://localhost:3001
+cd /opt/luemobil && docker compose ps metabase
+docker compose logs -f metabase
+tail -f /var/log/caddy/reporting.log          # eingebettete Zugriffe, Token gekürzt
+```
+
+Dashboards ändert man in der Oberfläche über den Tunnel. Neue Dashboards, die das Hilfecenter
+zeigen soll, brauchen *Teilen → Einbetten → Statische Einbettung → Veröffentlichen*, und das
+Hilfecenter braucht die neue Dashboard-ID.
+
+---
+
+## 6. Störungen
+
+| Meldung / Symptom | Ursache | Vorgehen |
+|---|---|---|
+| `… ist unvollständig (Endmarke von pg_dump fehlt)` | Upload abgebrochen oder Dump-Export beim Lieferanten fehlgeschlagen | Lieferant informieren, neu hochladen lassen. Nichts weiter zu tun |
+| `Seit … min nur kk_… vorhanden — zweiter Dump fehlt` | Lieferant hat nur einen Dump geschickt | Lieferant informieren. Wenn der zweite kommt: beide aus `fehler/` zurück nach `eingang/` (6.1) |
+| `Einspielen von … fehlgeschlagen` + SQL-Fehler davor | Dump fehlerhaft, oder Quellsystem hat die PostgreSQL-Version gewechselt | Fehlerzeile im Journal lesen. Neue Hauptversion beim Lieferanten → Server-PostgreSQL angleichen |
+| `…orders: Rückgang von X auf Y Zeilen` | Export unvollständig, oder beim Lieferanten wurde tatsächlich gelöscht | Beim Lieferanten nachfragen. Ist der Rückgang echt: Grenze in `import.conf` vorübergehend anheben, Dumps zurück nach `eingang/` |
+| `Rauchtest fehlgeschlagen` + Rückbau | Schema im Quellsystem geändert (Spalte umbenannt/entfernt), Sichten passen nicht mehr | Sichten anpassen (`metabase-setup/`), dann 4.6 und 4.7.1 erneut, dann Dumps zurück nach `eingang/` |
+| `PostgreSQL 17 oder neuer nötig` | Falsche Server-Version | Siehe 4.1 |
+| `Austausch … nach 5 Versuchen nicht möglich` | Etwas hält Verbindungen zu `kk_*` offen und verbindet sich sofort neu | `SELECT datname, usename, application_name FROM pg_stat_activity WHERE datname LIKE 'kk_%'`, Verursacher abstellen |
+| `Rückbau von … fehlgeschlagen — MANUELL PRÜFEN` | Sehr unwahrscheinlich, z. B. Datenbankserver während des Tauschs abgestürzt | 6.2 |
+| Wächter-Mail `Letzter erfolgreicher Import vor … h` | Keine Dumps angekommen, oder alle Läufe gescheitert | `ls eingang/ fehler/`, `journalctl -u luemobil-import --since yesterday`. Kam nichts: Lieferant fragen |
+| API liefert `502` | PostgREST läuft nicht | `systemctl status postgrest-tickets`, `journalctl -u postgrest-tickets` |
+| API liefert `401` für gültiges Token | Token gesperrt/abgelaufen, oder JWT-Schlüssel geändert | `token.sh liste` |
+| API liefert `500` nach Arbeiten an den Sichten | Rechte auf `rpt`-Sichten verloren (siehe Achtung in 4.6) | 4.7.1 erneut ausführen |
+| `docker compose up` meldet „network … not found" | Netzname in der `.env` stimmt nicht, oder der Hilfecenter-Stack läuft nicht | `docker network ls`, `HILFECENTER_NETZ` anpassen |
+| Import: `role "postgres" does not exist` | `DUMP_ROLLEN` in der `import.conf` leer | Eintrag `DUMP_ROLLEN="postgres"` ergänzen (siehe 4.4) |
+| Import: `permission denied` beim Verschieben der Dumps | Verzeichnisse gehören nicht uid 70 | `chown -R 70:70 /srv/luemobil/archiv /srv/luemobil/fehler /var/lib/luemobil-import`, ACL für den Eingang (4.2) |
+| App meldet, die Ticket-API sei nicht erreichbar | Beide Stacks nicht im selben Netz | `docker inspect <app-container> -f '{{json .NetworkSettings.Networks}}'` mit dem postgrest-Container vergleichen |
+| Metabase startet nicht, Log: „Unable to connect to Metabase application database" | `metabase_app`-Zugang falsch | Werte in `/opt/luemobil/.env` prüfen, `docker compose up -d metabase` |
+| Metabase-Dashboards leer, Kacheln melden Fehler | Verbindung zu `lue_reporting` gestört oder Rechte nach Sichten-Neuanlage verloren | Im Tunnel *Admin → Datenbanken → LüMobil Reporting → Verbindung testen*; 4.8.1 erneut ausführen |
+| Dashboards zeigen alte Zahlen | Zwischenspeicher wieder eingeschaltet | Im Tunnel *Admin → Performance → Standardregel* auf „Kein Zwischenspeicher"; siehe 4.8 |
+| Eingebettetes Dashboard im Hilfecenter leer | Token, Freigabe, IP oder CSP — siehe Fehlerbilder in `metabase-setup/EINBINDUNG_DASHBOARDS_HILFECENTER.md` | Dort Abschnitt 6 |
+| `https://reporting…/` liefert die Metabase-Anmeldung statt `404` | Caddy-Block fehlt oder ist falsch eingehängt | 4.9 prüfen, `caddy validate --config /etc/caddy/Caddyfile && systemctl reload caddy` |
+| Platte voll | Archiv oder `_alt` gewachsen | `du -sh /srv/luemobil/* /var/lib/postgresql`. `_alt`-Datenbanken dürfen gelöscht werden |
+
+### 6.1 Dumps erneut importieren
+
+```bash
+mv /srv/luemobil/fehler/kk_*-PROD-JJJJMMTT*.sql /srv/luemobil/dumps/eingang/
+cd /opt/luemobil && docker compose run --rm import      # oder: systemctl start luemobil-import
+```
+
+Ein schon erfolgreich importiertes Paar erkennt das Skript und überspringt es. Um es trotzdem neu
+einzuspielen, die beiden Zeilen aus `/var/lib/luemobil-import/importiert.txt` löschen.
+
+### 6.2 Von Hand auf den Stand von gestern zurück
+
+Nur nötig, wenn ein Import „erfolgreich“ war, die Daten aber inhaltlich falsch sind.
+
+```bash
+systemctl stop luemobil-import.timer
+docker compose -f /pfad/zum/hilfecenter/docker-compose.yml exec -T postgres psql -U luemobil <<'SQL'
+SELECT pg_terminate_backend(pid) FROM pg_stat_activity WHERE datname IN ('kk_mpswl','kk_swl','kk_mpswl_alt','kk_swl_alt');
+ALTER DATABASE kk_mpswl RENAME TO kk_mpswl_defekt;  ALTER DATABASE kk_mpswl_alt RENAME TO kk_mpswl;
+ALTER DATABASE kk_swl   RENAME TO kk_swl_defekt;    ALTER DATABASE kk_swl_alt   RENAME TO kk_swl;
+SQL
+docker compose -f /pfad/zum/hilfecenter/docker-compose.yml exec -T postgres \
+  psql -U luemobil -d lue_reporting -Atc "SELECT count(*) FROM rpt.bestellposition"
+# Ursache klären, dann: DROP DATABASE kk_mpswl_defekt; DROP DATABASE kk_swl_defekt;
+systemctl start luemobil-import.timer
+```
+
+### 6.3 Token kompromittiert
+
+Token sperren wie in 5.3. Ist der **JWT-Schlüssel** selbst betroffen (`/opt/luemobil/.env`
+gelangte nach außen): neuen Schlüssel erzeugen, `JWT_SECRET` in der `.env` ersetzen,
+`docker compose up -d postgrest`. Damit sind **alle** Tokens ungültig, neue ausstellen und
+`secrets/luemobil_api_token` im Hilfecenter austauschen.
+
+### 6.4 Metabase-Einbettung: Schlüssel wechseln
+
+Neuen Schlüssel erzeugen (`openssl rand -hex 32`), in `/opt/luemobil/.env` unter
+`MB_EMBEDDING_SECRET_KEY` eintragen, `docker compose up -d metabase`. Alle bisherigen Tokens
+sind sofort ungültig; das Hilfecenter braucht den neuen Schlüssel in
+`secrets/metabase_embed_secret`, sonst bleiben die Dashboards leer.
+
+### 6.5 `lue_reporting` wiederherstellen
+
+```bash
+cd /opt/luemobil && docker compose stop postgrest
+docker compose run --rm --entrypoint sh sicherung -c '
+  dropdb lue_reporting && createdb lue_reporting &&
+  pg_restore -d lue_reporting /sicherung/lue_reporting-JJJJMMTT.dump'
+docker compose up -d postgrest
+```
+
+### 6.6 Metabase wiederherstellen
+
+```bash
+cd /opt/luemobil && docker compose stop metabase
+docker compose run --rm --entrypoint sh sicherung -c '
+  dropdb metabase_app && createdb -O metabase_app metabase_app &&
+  pg_restore -d metabase_app /sicherung/metabase_app-JJJJMMTT.dump'
+docker compose up -d metabase
+```
+
+Wichtig: Dieselbe Metabase-Version wie zum Zeitpunkt der Sicherung verwenden, und
+`MB_ENCRYPTION_SECRET_KEY` muss unverändert sein, sonst bleiben die Datenbankzugänge unlesbar.
+
+---
+
+## 7. Datenschutz
+
+| Wo | Personenbezug | Aufbewahrung | Zugriff |
+|---|---|---|---|
+| `kk_mpswl`, `kk_swl` | Kundendaten der Produktion | bis zum nächsten Import (+1 Tag als `_alt`) | nur `postgres`, über Sichten |
+| `/srv/luemobil/archiv`, `fehler` | vollständige Dumps inkl. Passwort-Hashes | 7 Tage (`ARCHIV_TAGE`) | nur `postgres` (700) |
+| `protokoll.abfrage` | gesuchte E-Mail-Adresse, Bearbeiter, IP | 12 Monate (Vorschlag) | nur Datenbank-Administratoren |
+| `/var/backups/luemobil` | Abfrageprotokoll | 30 Tage | nur `postgres` (700) |
+| `metabase_app` | Metabase-Konten (Name, E-Mail), keine Kundendaten | dauerhaft | nur `metabase_app` |
+| Dashboard „4 — Betrieb und Störungen" | Tabelle mit einzelnen Bestellungen (Bestellnummer) | jeweils aktueller Stand | wer das Dashboard im Hilfecenter sieht |
+| Caddy-Log `reporting` | IP-Adresse, Token gekürzt, keine E-Mail | Log-Rotation von Caddy | root |
+| Container-Logs (`docker compose logs`) | IP-Adresse, keine E-Mail, keine Tokens | Docker-Log-Rotation | root |
+
+Löschung des Abfrageprotokolls monatlich, z. B. per `/etc/cron.d/luemobil`:
+
+```
+0 5 1 * * postgres psql -d lue_reporting -qc "SELECT protokoll.aufraeumen(12)"
+```
+
+Offene Punkte mit dem Datenschutz: Aufbewahrungsfrist des Abfrageprotokolls,
+Eintrag „Auskunft im Hilfecenter“ ins Verzeichnis der Verarbeitungstätigkeiten,
+Auftragsverarbeitung mit dem Hoster des virtuellen Servers.
+
+---
+
+## 8. Wartung
+
+| Aufgabe | Wie |
+|---|---|
+| Sicherheitsupdates | `apt update && apt upgrade` für den Host |
+| Abbilder aktualisieren | Version in `compose.yml` hochsetzen, `docker compose pull && docker compose up -d`, danach Abnahme aus 4.12. Vorher Sicherung prüfen |
+| PostgreSQL-Hauptversion | Gehört dem Hilfecenter-Stack. Erst wechseln, wenn der Lieferant wechselt — Dumps einer neueren Hauptversion lassen sich nicht einspielen |
+| Token erneuern | Vor Ablauf neues ausstellen, übergeben, altes sperren (`token.sh liste` zeigt `gueltig_bis`) |
+| Weitere einbettende Adresse | In `/etc/caddy/Caddyfile` bei `frame-ancestors` ergänzen, `systemctl reload caddy` |
+| Metabase aktualisieren | Sicherung von `metabase_app` prüfen, neues Abbild in `compose.yml`, `docker compose up -d metabase` (die Datenbank wandelt sich selbst um), danach Abnahme aus 4.12 |
+| Neues Dashboard fürs Hilfecenter | Im Tunnel veröffentlichen (5.4), ID ans Hilfecenter geben |
+| Sichten geändert | 4.5, danach unbedingt 4.6 |
+
+---
+
+## 9. Dateien im Repository
+
+| Datei | Zweck |
+|---|---|
+| `compose.yml` | Der Reporting-Stack: postgrest, metabase, import, sicherung |
+| `import/Dockerfile`, `sichern.sh` | Werkzeug-Abbild (psql, pg_dump) und die Sicherung |
+| `server/reporting.env.beispiel` | Vorlage für `/opt/luemobil/.env` |
+| `server/Caddyfile-reporting.example` | Caddy: nur Einbettungspfade, CSP, Token im Log gekürzt |
+| `server/ohne-docker/` | nginx- und systemd-Dateien für den Betrieb ohne Docker (Anhang A) |
+| `import/import.sh` | Der Import (Abschnitt 5.1) |
+| `import/test_import.sh` | Abnahmetest mit Testdatenbanken (4.9) |
+| `server/import.conf.beispiel` | Vorlage für `/etc/luemobil/import.conf` |
+| `server/luemobil-import.{service,timer}` | Import alle 30 Minuten |
+| `server/luemobil-import-waechter.{service,timer}` | Tägliche Prüfung der Aktualität |
+| `server/luemobil-sicherung.{service,timer}` | Tägliche Sicherung von `lue_reporting` |
+| `server/luemobil-meldung@.service`, `meldung.sh` | Fehlermail |
+| `server/postgrest-tickets.service` | PostgREST als Dienst |
+| `server/nginx-tickets-api.conf` | nginx: TLS, Rate-Limit, ein Endpunkt |
+| `server/sshd-dumps.conf` | SFTP-Chroot für den Lieferanten |
+| `metabase-setup/03,04,06,08_*.sql` | Reporting-Sichten |
+| `ticket-api/01_datenbank.sql` | API-Rollen, Funktion, Token-Register, Protokoll |
+| `ticket-api/token.sh` | Tokens ausstellen, auflisten, sperren |
+| `ticket-api/ANBINDUNG_HILFECENTER.md` | Schnittstellenbeschreibung Ticket-API für das Hilfecenter |
+| `server/metabase_datenbank.sql` | Rollen `metabase_app`/`metabase_leser`, Anwendungsdatenbank |
+| `server/metabase.{service,env.beispiel}` | Metabase als Dienst, nur auf 127.0.0.1 |
+| `server/metabase_nach_umzug.py` | Anpassungen nach dem Umzug (Lesezugang, Zwischenspeicher, Konten) |
+| `server/nginx-reporting.conf` | nginx: nur Einbettung, CSP auf das Hilfecenter beschränkt |
+| `metabase-setup/EINBINDUNG_DASHBOARDS_HILFECENTER.md` | Anleitung fürs Hilfecenter zum Einbetten |
+| `metabase-setup/einbettung_pruefen.py` | Prüft die Einbettung, erzeugt eine Testseite |
+
+---
+
+## Anhang A: Installation ohne Docker
 
 Alle Befehle als root, in dieser Reihenfolge.
 
-### 4.1 Pakete
+### A.1 Pakete
 
 ```bash
 # PostgreSQL 17 aus dem offiziellen Repository
@@ -142,7 +644,7 @@ timedatectl set-timezone Europe/Berlin
 Mailversand (`msmtp`) auf das Mail-Relay der Firma einrichten und testen:
 `echo test | mail -s test betrieb@luemobil.de`
 
-### 4.2 Benutzer und Verzeichnisse
+### A.2 Benutzer und Verzeichnisse
 
 ```bash
 groupadd --system luemobil-dumps
@@ -159,7 +661,7 @@ install -d -o root     -g root           -m 755  /etc/luemobil /opt/metabase
 install -d -o metabase -g metabase       -m 750  /var/lib/metabase /var/lib/metabase/plugins
 ```
 
-### 4.3 Skripte installieren
+### A.3 Skripte installieren
 
 ```bash
 git clone <repository> /opt/luemobil        # oder Ordner kopieren
@@ -172,7 +674,7 @@ cp /opt/luemobil/server/*.service /opt/luemobil/server/*.timer /etc/systemd/syst
 systemctl daemon-reload
 ```
 
-### 4.4 SFTP-Zugang für den Lieferanten
+### A.4 SFTP-Zugang für den Lieferanten
 
 ```bash
 install -d -o dumpupload -g dumpupload -m 700 /home/dumpupload/.ssh
@@ -194,7 +696,7 @@ sshd -t && systemctl reload ssh
 | Zeitpunkt | beliebig, der Server sieht alle 30 Minuten nach |
 | Idealerweise | zuerst unter `.tmp`-Namen hochladen und danach umbenennen. Nötig ist das nicht: Der Import wartet, bis eine Datei 2 Minuten unverändert ist, und prüft die Endzeile |
 
-### 4.5 Erstimport
+### A.5 Erstimport
 
 ```bash
 # Dumps einmalig von Hand ablegen (oder den Lieferanten hochladen lassen)
@@ -208,7 +710,7 @@ journalctl -u luemobil-import -n 30
 Erwartet: `Rauchtest übersprungen: lue_reporting existiert noch nicht (Ersteinrichtung)` und
 `Import erfolgreich (Erstimport).` Die Reporting-Datenbank entsteht erst im nächsten Schritt.
 
-### 4.6 Reporting-Datenbank
+### A.6 Reporting-Datenbank
 
 Die Skripte aus `metabase-setup/` legen die Sichten an. Auf dem Server verbindet sich
 `postgres_fdw` über den Unix-Socket statt über TCP, deshalb werden Host, Port und Platzhalter angepasst:
@@ -232,9 +734,9 @@ sudo -u postgres psql -d lue_reporting -c "SELECT count(*) FROM rpt.bestellposit
 
 Der Metabase-Zugang wird in 4.8.1 angelegt.
 
-### 4.7 Ticket-API
+### A.7 Ticket-API
 
-#### 4.7.1 Datenbankteil
+#### A.7.1 Datenbankteil
 
 ```bash
 umask 077
@@ -250,7 +752,7 @@ sudo -u postgres psql -d lue_reporting -v db_passwort="$DBPW" -f /opt/luemobil/t
 Mal das Passwort von `api_zugang` neu gesetzt: `-v db_passwort=` muss dann das Passwort aus
 `/etc/luemobil/postgrest.conf` sein.
 
-#### 4.7.2 PostgREST
+#### A.7.2 PostgREST
 
 ```bash
 cat > /etc/luemobil/postgrest.conf <<EOF
@@ -276,7 +778,7 @@ journalctl -u postgrest-tickets -n 5          # "Schema cache loaded … 1 RPCs"
 
 Kein `db-anon-role`, das ist Absicht: Ohne gültiges Token gibt es keine Antwort.
 
-#### 4.7.3 nginx und Zertifikat
+#### A.7.3 nginx und Zertifikat
 
 ```bash
 cp /opt/luemobil/server/nginx-tickets-api.conf /etc/nginx/sites-available/tickets-api
@@ -298,7 +800,7 @@ nginx -t && systemctl reload nginx
 `certbot` erneuert das Zertifikat automatisch (eigener Timer). Nach der Erneuerung muss nginx
 neu geladen werden: `echo 'deploy-hook = systemctl reload nginx' >> /etc/letsencrypt/cli.ini`.
 
-#### 4.7.4 Tokens ausstellen
+#### A.7.4 Tokens ausstellen
 
 ```bash
 cd /opt/luemobil/ticket-api
@@ -309,12 +811,12 @@ Das Token wird **einmal** angezeigt und muss über den Passwort-Tresor an das Hi
 Gespeichert wird nur seine Kennung (`jti`).
 Beschreibung für das Hilfecenter-Team: `ticket-api/ANBINDUNG_HILFECENTER.md`.
 
-### 4.8 Metabase
+### A.8 Metabase
 
 Metabase liefert die Dashboards. Nach außen ist nur die Einbettung ins Hilfecenter
 erreichbar; Dashboards bauen Administratoren über einen SSH-Tunnel.
 
-#### 4.8.1 Datenbanken und Rollen
+#### A.8.1 Datenbanken und Rollen
 
 ```bash
 PW_APP=$(openssl rand -hex 24); PW_LESER=$(openssl rand -hex 24)
@@ -327,7 +829,7 @@ Das legt an: Datenbank `metabase_app` samt Besitzer und die Rolle `metabase_lese
 (nur lesend auf `rpt`, dauerhaft `read only`, 120 s Abfragegrenze). Beide Passwörter
 notieren, `PW_APP` kommt gleich in die Konfiguration.
 
-#### 4.8.2 Programm und Konfiguration
+#### A.8.2 Programm und Konfiguration
 
 Die Version muss **dieselbe** sein wie lokal, sonst schlägt der Umzug fehl (hier 0.63.18):
 
@@ -344,7 +846,7 @@ cp /opt/luemobil/server/metabase.service /etc/systemd/system/; systemctl daemon-
 `MB_ENCRYPTION_SECRET_KEY` verschlüsselt die gespeicherten Datenbankzugänge. Geht er
 verloren, kann Metabase die Verbindung zu `lue_reporting` nicht mehr lesen. In den Tresor damit.
 
-#### 4.8.3 Dashboards übernehmen
+#### A.8.3 Dashboards übernehmen
 
 Die bestehenden Dashboards liegen in der lokalen Metabase (H2-Datei). Metabase bringt für den
 Umzug den Befehl `load-from-h2` mit. **Lokal geprobt am 22.09.2026:** 5 Dashboards und 80 Fragen
@@ -367,7 +869,7 @@ journalctl -u metabase -f      # 1–2 Minuten, bis "Metabase Initialization COM
 ss -ltnp | grep 3000           # muss 127.0.0.1:3000 zeigen, nicht *:3000
 ```
 
-#### 4.8.4 Nacharbeiten
+#### A.8.4 Nacharbeiten
 
 Über einen SSH-Tunnel, weil Metabase nicht öffentlich erreichbar ist:
 
@@ -393,7 +895,7 @@ Danach von Hand im Tunnel (`http://localhost:3030`):
 - Weitere Konten anlegen, wer Dashboards bauen soll.
 - Stichprobe: Zeigen die Dashboards die Zahlen des letzten Imports?
 
-#### 4.8.5 nginx für die Einbettung
+#### A.8.5 nginx für die Einbettung
 
 ```bash
 cp /opt/luemobil/server/nginx-reporting.conf /etc/nginx/sites-available/reporting
@@ -414,7 +916,7 @@ Die Schnittstellenbeschreibung fürs Hilfecenter steht in
 `metabase-setup/EINBINDUNG_DASHBOARDS_HILFECENTER.md`. Der Einbettungsschlüssel geht über den
 Passwort-Tresor dorthin.
 
-### 4.9 Zeitpläne aktivieren
+### A.9 Zeitpläne aktivieren
 
 ```bash
 systemctl enable --now luemobil-import.timer luemobil-import-waechter.timer luemobil-sicherung.timer
@@ -429,7 +931,7 @@ systemctl list-timers 'luemobil-*'
 
 Jeder fehlgeschlagene Dienst verschickt eine Mail an `MELDUNG_AN` mit den letzten 40 Protokollzeilen.
 
-### 4.10 Abnahme
+### A.10 Abnahme
 
 **Import** — Test mit Testdatenbanken, fasst die echten nicht an (ca. 1 Minute):
 
@@ -469,233 +971,3 @@ stichprobenartig im Browser: `https://reporting.luemobil.de/` muss `404` liefern
 `systemctl start luemobil-meldung@test.service` → Mail muss ankommen.
 
 ---
-
-## 5. Täglicher Betrieb
-
-### 5.1 So läuft ein Import
-
-1. **Suchen:** neuestes `kk_mpswl-PROD-*` und `kk_swl-PROD-*` im Eingang. Ältere, liegen gebliebene Dumps werden übersprungen und archiviert.
-2. **Warten, falls nötig:** Fehlt der Partner-Dump, wartet der Import bis zu 6 Stunden. Wird eine Datei noch geschrieben, wartet er auf den nächsten Lauf.
-3. **Vollständigkeit:** Endzeile von `pg_dump` vorhanden, beide Dumps vom selben Tag, Paar noch nicht importiert (SHA-256-Register).
-4. **Einspielen** in `kk_mpswl_neu` und `kk_swl_neu`, jeweils in einer einzigen Transaktion. Die laufenden Datenbanken bleiben dabei unberührt.
-5. **Plausibilität:** Mindestmengen, und keine Tabelle ist um mehr als 5 % geschrumpft (Konten, Bestellungen, Abo-Berechtigungen, Positionen, Produkte).
-6. **Austausch** per Umbenennen: aktuell → `_alt`, `_neu` → aktuell. Dauert unter einer Sekunde. Offene Verbindungen zu den Quelldatenbanken werden getrennt, `lue_reporting` verbindet sich beim nächsten Zugriff automatisch neu (getestet).
-7. **Rauchtest:** `SELECT count(*) FROM rpt.bestellposition` muss > 0 liefern. Wenn nicht, wird sofort zurückgetauscht.
-8. **Abschluss:** Dumps ins Archiv, Status nach `/var/lib/luemobil-import/letzter_import.json`, Dumps älter als 7 Tage löschen.
-
-**Grundsatz:** Scheitert irgendein Schritt, bleiben die Daten von gestern aktiv. Die Dumps
-wandern nach `fehler/`, und es kommt eine Mail.
-
-**Während des Austauschs** kann eine einzelne API- oder Metabase-Anfrage, die genau in dieser
-Sekunde läuft, mit Fehler enden. Die nächste Anfrage funktioniert wieder.
-
-**Metabase braucht beim Import nichts zu tun.** Es liest `lue_reporting`, und die wird nicht
-angefasst. Die Verbindungen in die ausgetauschten Quelldatenbanken baut PostgreSQL selbst neu
-auf. Lokal geprüft: Nach dem Abbruch aller Verbindungen liefert dieselbe Frage sofort wieder
-Zahlen. Ein Neustart von Metabase nach dem Import ist **nicht** nötig. Weil der Zwischenspeicher
-abgeschaltet ist (4.8.4), zeigen die Dashboards sofort den neuen Stand.
-
-### 5.2 Nachsehen
-
-```bash
-/opt/luemobil/import/import.sh --status                # letzter erfolgreicher Import (JSON)
-journalctl -u luemobil-import --since today            # Protokoll des Imports
-systemctl list-timers 'luemobil-*'                      # nächste Läufe
-ls -l /srv/luemobil/dumps/eingang /srv/luemobil/fehler  # liegt etwas herum?
-```
-
-Beispiel eines erfolgreichen Laufs:
-
-```
-Importiere Paar vom 20260912: kk_mpswl-PROD-20260912020000.sql, kk_swl-PROD-20260912020000.sql
-  kk_mpswl_neu eingespielt (2 s)
-  kk_swl_neu eingespielt (2 s)
-  kk_mpswl.customers: 2132 -> 2132
-  kk_mpswl.orders: 1551 -> 1551
-  kk_mpswl.abo_berechtigungen_luebeck: 8267 -> 8267
-  kk_swl.orders: 1551 -> 1551
-  kk_swl.orders_products: 1551 -> 1551
-  kk_swl.products: 34 -> 34
-  Datenbanken ausgetauscht
-  Rauchtest ok: 1551 Zeilen über lue_reporting
-Import erfolgreich. Vorheriger Stand liegt als kk_mpswl_alt / kk_swl_alt bereit.
-```
-
-### 5.3 Ticket-API
-
-```bash
-cd /opt/luemobil/ticket-api
-sudo -u postgres ./token.sh liste                       # Tokens, Zustand, Anzahl Abfragen
-sudo -u postgres ./token.sh sperren <jti>               # wirkt sofort
-sudo -u postgres psql -d lue_reporting -c \
-  "SELECT zeitpunkt, anwendung, bearbeiter, ip, treffer FROM protokoll.abfrage ORDER BY id DESC LIMIT 20"
-tail -f /var/log/nginx/tickets-api.log                  # Zugriffe (ohne E-Mail-Adressen)
-```
-
-### 5.4 Metabase
-
-```bash
-ssh -L 3030:127.0.0.1:3000 admin@server     # Oberfläche: http://localhost:3030
-systemctl status metabase
-journalctl -u metabase --since today
-tail -f /var/log/nginx/reporting.log         # eingebettete Zugriffe, ohne Token
-```
-
-Dashboards ändert man in der Oberfläche über den Tunnel. Neue Dashboards, die das Hilfecenter
-zeigen soll, brauchen *Teilen → Einbetten → Statische Einbettung → Veröffentlichen*, und das
-Hilfecenter braucht die neue Dashboard-ID.
-
----
-
-## 6. Störungen
-
-| Meldung / Symptom | Ursache | Vorgehen |
-|---|---|---|
-| `… ist unvollständig (Endmarke von pg_dump fehlt)` | Upload abgebrochen oder Dump-Export beim Lieferanten fehlgeschlagen | Lieferant informieren, neu hochladen lassen. Nichts weiter zu tun |
-| `Seit … min nur kk_… vorhanden — zweiter Dump fehlt` | Lieferant hat nur einen Dump geschickt | Lieferant informieren. Wenn der zweite kommt: beide aus `fehler/` zurück nach `eingang/` (6.1) |
-| `Einspielen von … fehlgeschlagen` + SQL-Fehler davor | Dump fehlerhaft, oder Quellsystem hat die PostgreSQL-Version gewechselt | Fehlerzeile im Journal lesen. Neue Hauptversion beim Lieferanten → Server-PostgreSQL angleichen |
-| `…orders: Rückgang von X auf Y Zeilen` | Export unvollständig, oder beim Lieferanten wurde tatsächlich gelöscht | Beim Lieferanten nachfragen. Ist der Rückgang echt: Grenze in `import.conf` vorübergehend anheben, Dumps zurück nach `eingang/` |
-| `Rauchtest fehlgeschlagen` + Rückbau | Schema im Quellsystem geändert (Spalte umbenannt/entfernt), Sichten passen nicht mehr | Sichten anpassen (`metabase-setup/`), dann 4.6 und 4.7.1 erneut, dann Dumps zurück nach `eingang/` |
-| `PostgreSQL 17 oder neuer nötig` | Falsche Server-Version | Siehe 4.1 |
-| `Austausch … nach 5 Versuchen nicht möglich` | Etwas hält Verbindungen zu `kk_*` offen und verbindet sich sofort neu | `SELECT datname, usename, application_name FROM pg_stat_activity WHERE datname LIKE 'kk_%'`, Verursacher abstellen |
-| `Rückbau von … fehlgeschlagen — MANUELL PRÜFEN` | Sehr unwahrscheinlich, z. B. Datenbankserver während des Tauschs abgestürzt | 6.2 |
-| Wächter-Mail `Letzter erfolgreicher Import vor … h` | Keine Dumps angekommen, oder alle Läufe gescheitert | `ls eingang/ fehler/`, `journalctl -u luemobil-import --since yesterday`. Kam nichts: Lieferant fragen |
-| API liefert `502` | PostgREST läuft nicht | `systemctl status postgrest-tickets`, `journalctl -u postgrest-tickets` |
-| API liefert `401` für gültiges Token | Token gesperrt/abgelaufen, oder JWT-Schlüssel geändert | `token.sh liste` |
-| API liefert `500` nach Arbeiten an den Sichten | Rechte auf `rpt`-Sichten verloren (siehe Achtung in 4.6) | 4.7.1 erneut ausführen |
-| Metabase startet nicht, Log: „Unable to connect to Metabase application database" | `metabase_app`-Zugang falsch | `/etc/luemobil/metabase.env` prüfen, `systemctl restart metabase` |
-| Metabase-Dashboards leer, Kacheln melden Fehler | Verbindung zu `lue_reporting` gestört oder Rechte nach Sichten-Neuanlage verloren | Im Tunnel *Admin → Datenbanken → LüMobil Reporting → Verbindung testen*; 4.8.1 erneut ausführen |
-| Dashboards zeigen alte Zahlen | Zwischenspeicher wieder eingeschaltet | Im Tunnel *Admin → Performance → Standardregel* auf „Kein Zwischenspeicher"; siehe 4.8.4 |
-| Eingebettetes Dashboard im Hilfecenter leer | Token, Freigabe, IP oder CSP — siehe Fehlerbilder in `metabase-setup/EINBINDUNG_DASHBOARDS_HILFECENTER.md` | Dort Abschnitt 6 |
-| `https://reporting…/` liefert die Metabase-Anmeldung statt `404` | nginx-Konfiguration nicht aktiv | 4.8.5 prüfen, `nginx -t && systemctl reload nginx` |
-| Platte voll | Archiv oder `_alt` gewachsen | `du -sh /srv/luemobil/* /var/lib/postgresql`. `_alt`-Datenbanken dürfen gelöscht werden |
-
-### 6.1 Dumps erneut importieren
-
-```bash
-mv /srv/luemobil/fehler/kk_*-PROD-JJJJMMTT*.sql /srv/luemobil/dumps/eingang/
-systemctl start luemobil-import && journalctl -u luemobil-import -n 30 -f
-```
-
-Ein schon erfolgreich importiertes Paar erkennt das Skript und überspringt es. Um es trotzdem neu
-einzuspielen, die beiden Zeilen aus `/var/lib/luemobil-import/importiert.txt` löschen.
-
-### 6.2 Von Hand auf den Stand von gestern zurück
-
-Nur nötig, wenn ein Import „erfolgreich“ war, die Daten aber inhaltlich falsch sind.
-
-```bash
-systemctl stop luemobil-import.timer
-sudo -u postgres psql -d postgres <<'SQL'
-SELECT pg_terminate_backend(pid) FROM pg_stat_activity WHERE datname IN ('kk_mpswl','kk_swl','kk_mpswl_alt','kk_swl_alt');
-ALTER DATABASE kk_mpswl RENAME TO kk_mpswl_defekt;  ALTER DATABASE kk_mpswl_alt RENAME TO kk_mpswl;
-ALTER DATABASE kk_swl   RENAME TO kk_swl_defekt;    ALTER DATABASE kk_swl_alt   RENAME TO kk_swl;
-SQL
-sudo -u postgres psql -d lue_reporting -c "SELECT count(*) FROM rpt.bestellposition"
-# Ursache klären, dann: DROP DATABASE kk_mpswl_defekt; DROP DATABASE kk_swl_defekt;
-systemctl start luemobil-import.timer
-```
-
-### 6.3 Token kompromittiert
-
-```bash
-sudo -u postgres /opt/luemobil/ticket-api/token.sh sperren <jti>     # sofort wirksam
-```
-
-Ist der **JWT-Schlüssel** selbst betroffen (`/etc/luemobil/jwt_secret` oder `postgrest.conf`
-gelangte nach außen): neuen Schlüssel erzeugen, in beide Dateien eintragen,
-`systemctl restart postgrest-tickets`. Damit sind **alle** Tokens ungültig. Neue ausstellen.
-
-### 6.4 Metabase-Einbettung: Schlüssel wechseln
-
-Neuen Schlüssel erzeugen (`openssl rand -hex 32`), in `/etc/luemobil/metabase.env` unter
-`MB_EMBEDDING_SECRET_KEY` eintragen, `systemctl restart metabase`. Alle bisherigen Tokens sind
-sofort ungültig; das Hilfecenter braucht den neuen Schlüssel, sonst bleiben die Dashboards leer.
-
-### 6.5 `lue_reporting` wiederherstellen
-
-```bash
-sudo -u postgres dropdb lue_reporting
-sudo -u postgres createdb lue_reporting
-sudo -u postgres pg_restore -d lue_reporting /var/backups/luemobil/lue_reporting-JJJJMMTT.dump
-systemctl restart postgrest-tickets
-```
-
-### 6.6 Metabase wiederherstellen
-
-```bash
-systemctl stop metabase
-sudo -u postgres dropdb metabase_app && sudo -u postgres createdb -O metabase_app metabase_app
-sudo -u postgres pg_restore -d metabase_app /var/backups/luemobil/metabase_app-JJJJMMTT.dump
-systemctl start metabase
-```
-
-Wichtig: Dieselbe Metabase-Version wie zum Zeitpunkt der Sicherung verwenden, und
-`MB_ENCRYPTION_SECRET_KEY` muss unverändert sein, sonst bleiben die Datenbankzugänge unlesbar.
-
----
-
-## 7. Datenschutz
-
-| Wo | Personenbezug | Aufbewahrung | Zugriff |
-|---|---|---|---|
-| `kk_mpswl`, `kk_swl` | Kundendaten der Produktion | bis zum nächsten Import (+1 Tag als `_alt`) | nur `postgres`, über Sichten |
-| `/srv/luemobil/archiv`, `fehler` | vollständige Dumps inkl. Passwort-Hashes | 7 Tage (`ARCHIV_TAGE`) | nur `postgres` (700) |
-| `protokoll.abfrage` | gesuchte E-Mail-Adresse, Bearbeiter, IP | 12 Monate (Vorschlag) | nur Datenbank-Administratoren |
-| `/var/backups/luemobil` | Abfrageprotokoll | 30 Tage | nur `postgres` (700) |
-| `metabase_app` | Metabase-Konten (Name, E-Mail), keine Kundendaten | dauerhaft | nur `metabase_app` |
-| Dashboard „4 — Betrieb und Störungen" | Tabelle mit einzelnen Bestellungen (Bestellnummer) | jeweils aktueller Stand | wer das Dashboard im Hilfecenter sieht |
-| nginx-Log `reporting` | IP-Adresse, kein Token, keine E-Mail | Log-Rotation (14 Tage) | root |
-| nginx-Log | IP-Adresse, keine E-Mail | Log-Rotation der Distribution (14 Tage) | root |
-
-Löschung des Abfrageprotokolls monatlich, z. B. per `/etc/cron.d/luemobil`:
-
-```
-0 5 1 * * postgres psql -d lue_reporting -qc "SELECT protokoll.aufraeumen(12)"
-```
-
-Offene Punkte mit dem Datenschutz: Aufbewahrungsfrist des Abfrageprotokolls,
-Eintrag „Auskunft im Hilfecenter“ ins Verzeichnis der Verarbeitungstätigkeiten,
-Auftragsverarbeitung mit dem Hoster des virtuellen Servers.
-
----
-
-## 8. Wartung
-
-| Aufgabe | Wie |
-|---|---|
-| Sicherheitsupdates | `apt update && apt upgrade`, PostgreSQL-Nebenversionen kommen darüber mit |
-| PostgREST aktualisieren | Neue Version wie in 4.1 nach `/usr/local/bin`, `systemctl restart postgrest-tickets`, API-Test aus 4.9 |
-| PostgreSQL-Hauptversion | Erst wechseln, wenn der Lieferant wechselt. Dumps einer neueren Hauptversion lassen sich nicht einspielen |
-| Token erneuern | Vor Ablauf neues ausstellen, übergeben, altes sperren (`token.sh liste` zeigt `gueltig_bis`) |
-| Neue IP fürs Hilfecenter | `/etc/luemobil/erlaubte_ips.conf`, `nginx -t && systemctl reload nginx` |
-| Metabase aktualisieren | Sicherung von `metabase_app` prüfen, `systemctl stop metabase`, neue `metabase.jar` nach `/opt/metabase`, `systemctl start metabase` (die Datenbank wandelt sich selbst um), danach Abnahme aus 4.10 |
-| Neues Dashboard fürs Hilfecenter | Im Tunnel veröffentlichen (5.4), ID ans Hilfecenter geben |
-| Sichten geändert | 4.6, danach unbedingt 4.7.1 |
-
----
-
-## 9. Dateien im Repository
-
-| Datei | Zweck |
-|---|---|
-| `import/import.sh` | Der Import (Abschnitt 5.1) |
-| `import/test_import.sh` | Abnahmetest mit Testdatenbanken (4.9) |
-| `server/import.conf.beispiel` | Vorlage für `/etc/luemobil/import.conf` |
-| `server/luemobil-import.{service,timer}` | Import alle 30 Minuten |
-| `server/luemobil-import-waechter.{service,timer}` | Tägliche Prüfung der Aktualität |
-| `server/luemobil-sicherung.{service,timer}` | Tägliche Sicherung von `lue_reporting` |
-| `server/luemobil-meldung@.service`, `meldung.sh` | Fehlermail |
-| `server/postgrest-tickets.service` | PostgREST als Dienst |
-| `server/nginx-tickets-api.conf` | nginx: TLS, Rate-Limit, ein Endpunkt |
-| `server/sshd-dumps.conf` | SFTP-Chroot für den Lieferanten |
-| `metabase-setup/03,04,06,08_*.sql` | Reporting-Sichten |
-| `ticket-api/01_datenbank.sql` | API-Rollen, Funktion, Token-Register, Protokoll |
-| `ticket-api/token.sh` | Tokens ausstellen, auflisten, sperren |
-| `ticket-api/ANBINDUNG_HILFECENTER.md` | Schnittstellenbeschreibung Ticket-API für das Hilfecenter |
-| `server/metabase_datenbank.sql` | Rollen `metabase_app`/`metabase_leser`, Anwendungsdatenbank |
-| `server/metabase.{service,env.beispiel}` | Metabase als Dienst, nur auf 127.0.0.1 |
-| `server/metabase_nach_umzug.py` | Anpassungen nach dem Umzug (Lesezugang, Zwischenspeicher, Konten) |
-| `server/nginx-reporting.conf` | nginx: nur Einbettung, CSP auf das Hilfecenter beschränkt |
-| `metabase-setup/EINBINDUNG_DASHBOARDS_HILFECENTER.md` | Anleitung fürs Hilfecenter zum Einbetten |
-| `metabase-setup/einbettung_pruefen.py` | Prüft die Einbettung, erzeugt eine Testseite |
